--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
         }
         html body {
             box-sizing: border-box;
-            display: grid;
-            grid-template-columns: 50% 50%;
+            /* display: grid; */
+            /* grid-template-columns: 50% 50%; */
             font-size: 18px;
+            max-width: 800px;
+            margin: 0 auto;
         }
         .ci {
             height: 100%;
             text-align: center;
-            padding: 0 30px;
+            padding: 0 10px;
         }
 
         span {
@@ -47,17 +49,21 @@
             background-position-x: left;
         }
         .tu{
-            width: 765px;
-            height: 480px;
+            width: calc(765px / 3);
+            height: calc(480px / 3);
             animation: identifier 5s infinite;
             background: url('https://img.wumaow.org/upload/tu/56358679.jpg');
             background-size:100% 100%;
             background-repeat: no-repeat;
+            float: left;
         }
     </style>
 </head>
 
 <body>
+    <div class="tu">
+
+    </div>
     <div class="ci">
         <span>
             鸡你太美 baby 鸡你太美 baby
@@ -169,9 +175,7 @@
             oh eh oh 你到底属于谁就是现在告诉我
         </span>
     </div>
-    <div class="tu">
 
-    </div>
 </body>
 
 </html>
